config/6-ratings-egress/istio-system/gw-tcp-egress-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-tcp-egress-tls
  namespace: istio-system
spec:
  selector:
    istio: egressgateway
  servers:
  - hosts:
    - mysql.istio-system.svc.cluster.local
    port:
      name: tls
      number: 443
      protocol: TLS
    tls:
      mode: ISTIO_MUTUAL
